--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,6 +5,12 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+
+   <form method="POST" action="/newteam">
+     <input type="text" name="name">
+     <input type="text" name="coach">
+   </form>
+   
  </body>
 </html>
 
