Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -9,6 +9,12 @@
    <form method="POST" action="/newteam">
      <input type="text" name="name">
      <input type="text" name="coach">
+     <input type="text" name="pg">
+     <input type="text" name="sg">
+     <input type="text" name="pf">
+     <input type="text" name="sf">
+     <input type="text" name="c">
+
    </form>
 
  </body>
