Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,7 +7,7 @@
  <body>
 
    <form method="POST" action="/newteam">
-     <input type="text" name="name">
+     <p>Team Name <input type="text" name="name"></p>
      <input type="text" name="coach">
      <input type="text" name="pg">
      <input type="text" name="sg">
