--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -8,12 +8,12 @@
 
    <form method="POST" action="/newteam">
      <p>Team Name <input type="text" name="name"></p>
-     <input type="text" name="coach">
-     <input type="text" name="pg">
-     <input type="text" name="sg">
-     <input type="text" name="pf">
-     <input type="text" name="sf">
-     <input type="text" name="c">
+     <p>Coach <input type="text" name="coach"></p>
+     <p>Point Guard <input type="text" name="pg"></p>
+     <p>Shooting Guard <input type="text" name="sg"></p>
+     <p>Power Forward <input type="text" name="pf"></p>
+     <p>Small Forward <input type="text" name="sf"></p>
+     <p>Center <input type="text" name="c"></p>
 
    </form>
 
