--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -6,7 +6,7 @@
  </head>
  <body>
 
-   <form method="POST" action="/newteam">
+   <form method="POST" action="/team">
      <p>Team Name <input type="text" name="name"></p>
      <p>Coach <input type="text" name="coach"></p>
      <p>Point Guard <input type="text" name="pg"></p>
