--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,7 +7,7 @@
  <body>
 
    <form method="POST" action="/team">
-     <p>Team Name <input type="text" name="name"></p>
+     <h1><p>Team Name <input type="text" name="name"></p></h1>
      <p>Coach <input type="text" name="coach"></p>
      <p>Point Guard <input type="text" name="pg"></p>
      <p>Shooting Guard <input type="text" name="sg"></p>
