Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -5,7 +5,7 @@
   <title>Basketball Team</title>
  </head>
  <body>
-   <h1>Team Name: @team_name</h1>
+   <h1>Team Name: <% @team_name %></h1>
    <h2>Coach: @coach</h2>
    <h2>Point Guard: @pg</h2>
    <h2>Shooting Guard: @sg</h2>
