--- a/views/team.erb
+++ b/views/team.erb
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>Team Name: <%= @team_name %></h1>
-   <h2>Coach: @coach</h2>
+   <h2>Coach: <%= @coach %></h2>
    <h2>Point Guard: @pg</h2>
    <h2>Shooting Guard: @sg</h2>
    <h2>Small Forward: @sf</h2>
