Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -13,7 +13,7 @@
      <p>Shooting Guard <input type="text" name="sg"></p>
      <p>Power Forward <input type="text" name="pf"></p>
      <p>Small Forward <input type="text" name="sf"></p>
-     <p>Center <input type="text" name="center"></p>
+     <p>Center <input type="text" name="c"></p>
      <input type="submit" id="Submit">
 
    </form>
